make generic.